--- a/fai-cd/index.html
+++ b/fai-cd/index.html
@@ -33,23 +33,23 @@
 <br>
 <br>
 <span class="downloadbox-border" >
-<a href="faicd64-large_5.10.1+3.iso" style="text-decoration: none">
-<span class="downloadbox-real" >FAI ISO large  &nbsp; (1.1 GB) </span>
+<a href="faicd64-large_5.10.3.iso" style="text-decoration: none">
+<span class="downloadbox-real" >FAI ISO large  &nbsp; (1.2 GB) </span>
 </a>
 </span>
 &nbsp;
 &nbsp;
 &nbsp;
 The default image. Includes all packages for XFCE and GNOME but only the basefiles
-for CentOS 7 and Ubuntu 18.04
+for CentOS 7 and Ubuntu 20.04
 <p>
 <p> &nbsp;
 <p>
 
 
 <span class="downloadbox-border" >
-<a href="faicd64-small_5.10.1+3.iso" style="text-decoration: none">
-<span class="downloadbox-real" >FAI ISO small &nbsp; (620 MB)</span>
+<a href="faicd64-small_5.10.3.iso" style="text-decoration: none">
+<span class="downloadbox-real" >FAI ISO small &nbsp; (674 MB)</span>
 </a>
 </span>
 &nbsp;
@@ -62,7 +62,7 @@ basefiles are downloaded from the internet.
 <p>
 
 <span class="downloadbox-border" >
-<a href="faicd64-ubuntu-only_5.10.1+3.iso" style="text-decoration: none">
+<a href="faicd64-ubuntu-only_5.10.3.iso" style="text-decoration: none">
 <span class="downloadbox-real" >FAI ISO Ubuntu &nbsp; (1.3 GB)</span>
 </a>
 </span>
@@ -76,8 +76,8 @@ This image only installs Ubuntu 20.04 LTS. All packages are included.
 
 
 <span class="downloadbox-border" >
-<a href="faicd64-autodiscover_5.10.1+3.iso" style="text-decoration: none">
-<span class="downloadbox-real" >Autodiscover CD &nbsp; (35 MB) </span>
+<a href="faicd64-autodiscover_5.10.3.iso" style="text-decoration: none">
+<span class="downloadbox-real" >Autodiscover CD &nbsp; (38 MB) </span>
 </a>
 </span>
 &nbsp;
@@ -87,14 +87,14 @@ Boot only image which autodiscovers the FAI server.
 </p>
 <br>
 
-All installation images use Debian 10 aka buster, FAI 5.10.1+3, kernel 4.19, amd64 architecture,
+All installation images use Debian 11 aka bullseye, FAI 5.10.3, kernel 5.10, amd64 architecture,
 <a href=sha256sums.asc>sha256sum.asc</a> of the ISO's. The can boot
 from CD/DVD or USB stick with legacy BIOS or UEFI.
 <br>
 <p style="text-align: center;">
 <b>If none of the ISOs fit your needs, use the <a href="/FAIme">FAI.ME build
-service</a></b>. This also supports Debian 10 with a backports kernel
-and Debian testing (aka Debian 11).
+service</a></b>. This also supports Debian 10 (oldstable) with a backports kernel
+and Debian 11.
 
 <!-- prepared for buster
 
@@ -116,7 +116,7 @@ This is the small FAI CD using Debian stretch, kernel 4.9.
 
 You can write the ISO image onto a USB stick using the command dd(1):
 <div class="featurebox">
-<pre>dd if=faicd64-large_5.9.iso of=/dev/sdX</pre> </div>
+<pre>dd if=faicd64-large_5.10.3.iso of=/dev/sdX</pre> </div>
 and replace /dev/sdX with the name of your USB device (e.g. /dev/sdf).
 
 <HR>
@@ -124,7 +124,7 @@ and replace /dev/sdX with the name of your USB device (e.g. /dev/sdf).
 
 <h3>Short description for the FAI CD images</h3>
 <ul>
-<li> These installation images can install Debian 10 (XFCE and GNOME),
+<li> These installation images can install Debian 11 (XFCE and GNOME),
 Ubuntu 20.04 and CentOS 8, without the need of an install server
 <li> No network is needed and you can install the whole system from
 the installation media.
