bullseye is not the stable release, backports now for both releases

--- a/FAIme/cloud/index.html
+++ b/FAIme/cloud/index.html
@@ -100,13 +100,13 @@ password will be generated </label>
 <br></br>
 
 <select name="suite" >
-                  <option value="buster">Debian 10 "buster" (stable) </option>
-                  <option value="bullseye">Debian "bullseye" (testing) </option>
+                  <option value="bullseye">Debian "bullseye" (stable) </option>
+                  <option value="buster">Debian 10 "buster" (oldstable) </option>
       </select> Select a distribution
 &ensp; &ensp;
 <span style="padding:0px !important;">
 <input type="checkbox" name="cl1" value="BACKPORTS" /> Enable
-backports including newer kernel (not for testing)</span>
+backports including newer kernel</span>
 <p></p>
 <select name="desktop" >
                   <option value="" selected="selected" >Plain text console, no X11 </option>
