--- a/FAIme/index.html
+++ b/FAIme/index.html
@@ -119,15 +119,15 @@
 
 					<p>
 					<select name="suite" >
-						<option	value="buster">Debian 10 "buster" (stable) </option>
-						<option	value="bullseye">Debian "bullseye" (testing) </option>
+						<option	value="bullseye">Debian "bullseye" (stable) </option>
+						<option	value="buster">Debian 10 "buster" (oldstable) </option>
 
 					</select> Distribution
 					&ensp; &ensp;
 					<span style="padding:0px !important;">
 						<input type="checkbox" name="cl1" value="BACKPORTS" /> Enable
 						backports including
-						newer kernel (only for stable)</span>
+						newer kernel</span>
 
 					</p>
 					<p>
