--- a/FAIme/index.html
+++ b/FAIme/index.html
@@ -43,7 +43,7 @@
 					overridden without any further confirmation</b>.</p>
 
 				<p>
-				<a href="#" onclick="toggle_visibility('adv');toggle_visibility('adv2');toggle_visibility('adv3');" >Toggle</a> between basic/advanced settings
+				<a href="#" onclick="toggle_all()" >Toggle</a> between basic/advanced settings
 				</p>
 				<form action="/cgi/faime.cgi" method="post" enctype="multipart/form-data">
 
@@ -209,6 +209,12 @@ function toggle_visibility(id) {
 		e.style.display = 'inline';
 	else
 		e.style.display = 'none';
+}
+
+function toggle_all() {
+   toggle_visibility('adv');
+   toggle_visibility('adv2');
+   toggle_visibility('adv3');
 }
 //-->
 		</script>
