--- a/roadmap/index.html
+++ b/roadmap/index.html
@@ -40,10 +40,10 @@ contact before you start working.
 <h1>Topics for FAI 6.X</h1>
 <ul>
 <li> --- TODO ---
-<li> support target release in package_config
-<li> add Ubuntu support to FAI.me service
+<li> add Ubuntu support to FAI.me service (postponed)
 <li> relax and recover from testing and release process!
 <li> --- DONE ---
+<li> support target release in package_config
 <li> use zstd instead of gzip
 <li> partition label and partition uuid support in setup-storage
 <li> support for user defined postinst script with FAI.me service
@@ -59,7 +59,7 @@ classes, date of last fai action
 <br>
 <HR>
 <ADDRESS>
-  Thu, 26 May 2022 10:54:44 +0200
+  Fri, 26 Aug 2022 22:46:04 +0200
 </ADDRESS>
 
       </div>
