--- a/index.html
+++ b/index.html
@@ -69,12 +69,12 @@ I <a href="https://lists.uni-koeln.de/pipermail/linux-fai/2017-November/011869.h
 </ul>
 
 <div style="width:32%;float:right;position:relative; top:-110px;">
-<img alt="distributions" src="/pics/dist-logos.png" width="270"/>
+<img alt="distributions" src="/pics/dist-logos-new.png" width="270"/>
 </div>
 
 <h2 style="display:inline-block;width:40%">Features</h2>
 <ul>
-<li> Installs Debian, Ubuntu, CentOS, RHEL, SUSE, ...</li>
+<li> Installs Debian, Ubuntu, Rocky Linux, CentOS, RHEL, SUSE, ...</li>
 <li> Centralized deployment and configuration management</li>
 <li> Automated installation of virtual machines using KVM, XEN or VirtualBox and Vserver</li>
 <li> Creation of custom disk image for OpenStack, KVM, VirtualBox,
