--- a/reports/index.html
+++ b/reports/index.html
@@ -36,6 +36,54 @@ Currently we have more than 300 detailed reports. Please also fill out the <a hr
 <p>
 <hr/>
 
+<b>From:</b> anonymous
+<br><b>Date:</b> Wed, 11 May 2022 19:20:07 +0000
+<pre>
+Are you using the FAI.me build service? Yes
+How many hosts have you installed using fai? <b>one</b>
+Which version of fai are you using? <b>5.10.3</b> FAI.me build
+Which version are you using as your install kernel? Kernel Linux: 5.16.0-0.bpo.4-amd64
+
+Which types of hosts are you installing with fai? Home NAS @OpenZFS
+How do you boot your hosts? via USB stick
+Does the default install kernel recognize all your hardware? Yes
+Which drivers are missing? none
+Do you manage your configuration space under version control? no
+What types of scripts are you using for local customization? shell - bash
+
+<b>What is the business of your company/organisation?</b> Home NAS to gain some digital sovereignty.
+<br><b>Additional comments:</b>
+The USB installation stick is mainly for disaster recovery of my openmediavault Home NAS, but also to help others get started.
+</pre> <HR>
+
+
+<b>From:</b> anonymous
+<br><b>Date:</b> Fri, 4 Nov 2022 15:33:12 +0100
+<pre>
+Are you using the FAI.me build service? Yes (online build)
+How many hosts have you installed using fai? <b>10</b>
+Which version of fai are you using? <b>5.10.3</b>
+Which version are you using as your install kernel? 5.10.0-19-amd64
+Which types of hosts are you installing with fai? Notebooks
+How do you boot your hosts? USB stick / Optical disk
+
+Does the default install kernel recognize all your hardware? Yes - no specific hardware is required - I use mobile tethering for Internet
+Which drivers are missing? None
+
+Do you manage your configuration space under version control? No
+How big is your config space (Mbytes, # of files)? 7KB, 6 Files
+What types of scripts are you using for local customization? shell
+
+<b>What is the business of your company/organisation?</b>No business. Personal project
+<br><b>Additional comments:</b>
+A much needed tool in today's fast paced world. Fully automated
+installs make your life easier and productivity is greatly
+increased. Managed to install Linux on all the 10 devices in less than
+10 minutes.
+</pre> <HR>
+
+
+
 <b>From:</b> someone, @ ocado dot com
 <br><b>Date:</b> Wed, 21 Jul 2021 12:35:05 +0100
 <pre>
