--- a/otherdocs/index.html
+++ b/otherdocs/index.html
@@ -120,7 +120,7 @@ swedish installation using FAI, <a href="https://www.youtube.com/watch?v=W1tT60E
 
 
 <li> <a href="http://neeleshgurjar.co.in/techidnyan/bare-metal-provisioning-of-linux-proxmox-using-fai/">Bare Metal Provisioning of Linux (Proxmox) using FAI</a>,
-<a href="https://pve.proxmox.com/wiki/Unattended_installation_of_Proxmox">blog entry<a/>
+<a href="https://pve.proxmox.com/wiki/Unattended_installation_of_Proxmox">wiki entry<a/>
  (2015)
 
 <li> <a href="http://syslinux.fr/fai-debian/">Description of a
