--- a/reports/index.html
+++ b/reports/index.html
@@ -54,7 +54,9 @@ What types of scripts are you using for local customization? shell - bash
 <b>What is the business of your company/organisation?</b> Home NAS to gain some digital sovereignty.
 <br><b>Additional comments:</b>
 The USB installation stick is mainly for disaster recovery of my openmediavault Home NAS, but also to help others get started.
+ <a href="pictures/hp-nas.png"><img alt="HP NAS" src="pictures/hp-nas.png" width="50%" border="0"></a>
 </pre> <HR>
+
 
 
 <b>From:</b> anonymous
