remove link to irc logs, they are offline since years

--- a/mailinglist/index.html
+++ b/mailinglist/index.html
@@ -69,18 +69,8 @@ is the developer mailling list
 <h1>IRC</h1>
 
 IRC channel <a href=irc://irc.debian.org/#fai>#fai</a> on irc.debian.org,
-very good for quick help (<a href="http://layer-acht.org/fai-irc/">logs</a>).
+very good for quick help.
 This is a bilingual channel. We speak English and German.
-<ul>
-<li>
-Search the IRC logs: 
-<form METHOD="get" ACTION="https://google.com/search">
-  <input type="text"   name="q" size="17" maxlength="255" value=""/>
-    <input type="hidden" name="sitesearch"
-      value="http://layer-acht.org/fai-irc/"/>
-      <input type="submit" name="btnG" value="Go" />
-</form>
-</ul>
 
 <h1>Wiki</h1>
 
