new release, new ISO images

--- a/index.html
+++ b/index.html
@@ -59,8 +59,9 @@ Motto: Plan your installation, and FAI installs your plan.</p>
 <h2 style="display:inline-block;width:50%">NEWS</h2>
 
 <ul>
-<li>[Dez 20, 2021] New ISO images are available</a></li>
-<li>[May 24, 2021] FAI 5.10.3 released</a></li>
+<li>[Jan 15, 2023] <a href="https://fai-project.org/fai-cd/index2.html">The new ISO
+  images using FAI 6.0</a></li>
+  <li>[Jan 13, 2023] FAI 6.0 released</a></li>
 <li>[Jan 21, 2021] FAIme now adds non-free firmware needed for wireless cards</a></li>
 <li> <b>
 I <a href="https://lists.uni-koeln.de/pipermail/linux-fai/2017-November/011869.html">announced</a> the <a href="/FAIme">FAI.me</a> service</b>
