--- a/FAIme/index.html
+++ b/FAIme/index.html
@@ -120,6 +120,7 @@
 					<p>
 					<select name="suite" >
 						<option	value="bullseye">Debian "bullseye" (stable) </option>
+						<option	value="bookworm">Debian "bookworm" (testing) </option>
 						<option	value="buster">Debian 10 "buster" (oldstable) </option>
 
 					</select> Distribution
