--- a/index.html
+++ b/index.html
@@ -43,8 +43,8 @@ machines or on a cloud-computing platform. using the <a href=FAIme>FAI.me build 
 <p style="float:right; position:relative; top:-30px;">
 <!-- <p style="text-align: center;"> -->
 <span class="downloadbox-border" >
-<a href="/fai-cd/faicd64-large_5.10.3.iso" style="text-decoration: none">
-<span class="downloadbox-real" >FAI ISO (1.1 GB)</span>
+<a href="/fai-cd/faicd64-large_6.0.iso" style="text-decoration: none">
+<span class="downloadbox-real" >FAI ISO (1.3 GB)</span>
 </a>
 </span>
 </p>
@@ -59,9 +59,10 @@ Motto: Plan your installation, and FAI installs your plan.</p>
 <h2 style="display:inline-block;width:50%">NEWS</h2>
 
 <ul>
+<li>[Feb 09, 2023] The FAIme build service now supports Debian 12 aka bookworm using FAI 6.0</a></li>
 <li>[Jan 15, 2023] <a href="https://fai-project.org/fai-cd/index2.html">The new ISO
   images using FAI 6.0</a></li>
-  <li>[Jan 13, 2023] FAI 6.0 released</a></li>
+<li>[Jan 13, 2023] FAI 6.0 released</a></li>
 <li>[Jan 21, 2021] FAIme now adds non-free firmware needed for wireless cards</a></li>
 <li> <b>
 I <a href="https://lists.uni-koeln.de/pipermail/linux-fai/2017-November/011869.html">announced</a> the <a href="/FAIme">FAI.me</a> service</b>
