use compact sidenav

--- a/FAIme/index.html
+++ b/FAIme/index.html
@@ -7,8 +7,8 @@
 		<!--Import materialize.css-->
 		<link type="text/css" rel="stylesheet" href="/css/materialize.css" media="screen"/>
 
-		<!--Import sidenav.css-->
-		<link type="text/css" rel="stylesheet" href="/css/sidenav.css" media="screen"/>
+		<!--Import sidenav-compact.css-->
+		<link type="text/css" rel="stylesheet" href="/css/sidenav-compact.css" media="screen"/>
 
 		<!--Let browser know website is optimized for mobile-->
 		<meta name="viewport" content="width=device-width,initial-scale=1.0"/>
