add links so only the arrow opens/closes the drop down
click on Home for e.g. now jumps to home page

--- a/header.html
+++ b/header.html
@@ -31,7 +31,7 @@
       </a>
       <li class="active">
         <div class="collapsible-header">
-          <a class="black-text">Home</a>
+          <a class="black-text" href="/">Home</a>
           <i class="material-icons">arrow_drop_down</i>
 
         </div>
@@ -76,7 +76,7 @@
     <ul class="collapsible">
       <li class="active">
         <div class="collapsible-header">
-          <a class="black-text">Download</a>
+          <a class="black-text" href="/fai-cd/">Download</a>
           <i class="material-icons">arrow_drop_down</i>
         </div>
         <div class="collapsible-body">
@@ -101,7 +101,7 @@
     <ul class="collapsible">
       <li class="active">
         <div class="collapsible-header">
-          <a class="black-text">Documentation</a>
+          <a class="black-text" href="/guide/">Documentation</a>
           <i class="material-icons">arrow_drop_down</i>
         </div>
         <div class="collapsible-body">
@@ -132,7 +132,7 @@
     <ul class="collapsible">
       <li class="active">
         <div class="collapsible-header">
-          <a class="black-text">Developers</a>
+          <a class="black-text" href="/sources/">Developers</a>
           <i class="material-icons">arrow_drop_down</i>
         </div>
         <div class="collapsible-body">
