--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <!--Import materialize.css-->
     <link type="text/css" rel="stylesheet" href="/css/materialize.css" media="screen"/>
 
-    <!--Import sidenav.css-->
+    <!--Import sidenav-compact.css-->
     <link type="text/css" rel="stylesheet" href="/css/sidenav-compact.css" media="screen"/>
 
     <!--Let browser know website is optimized for mobile-->
