use browser-defau;lt for select

--- a/FAIme/index.html
+++ b/FAIme/index.html
@@ -122,7 +122,7 @@ This image will do an unattended installation of Debian and the selected applica
 									Disk partitioning scheme
 								</p>
 								<div class="col s12 m6 input-field">
-									<select name="partition">
+									<select class="browser-default" name="partition">
 										<option value="ONE">One partition</option>
 										<option value="ONE_LVM">One partition using LVM</option>
 										<option value="HOME">Partition for /home</option>
@@ -155,7 +155,7 @@ This image will do an unattended installation of Debian and the selected applica
 								Language and keyboard layout
 							</p>
 							<div class="input-field col s12 m6">
-								<select name="keyboard">
+								<select class="browser-default" name="keyboard">
 									<option value="gb">English UK</option>
 									<option value="us" selected="selected">English US</option>
                                                                         <option value="fi">Finnish / Suomi</option>
@@ -181,7 +181,7 @@ This image will do an unattended installation of Debian and the selected applica
 							</p>
 							<div class="col s12 m6">
 								<div class="input-field">
-									<select name="suite">
+									<select class="browser-default" name="suite">
 										<option value="bullseye">Debian "bullseye" (stable)
 										</option>
 										<option value="bookworm">Debian "bookworm" (testing)
@@ -203,7 +203,7 @@ This image will do an unattended installation of Debian and the selected applica
 								Which desktop to install
 							</p>
 							<div class="col s12 m6 input-field">
-								<select name="desktop">
+								<select class="browser-default" name="desktop">
 									<option value="">Plain text console, no X11</option>
 									<option value="XFCE">XFCE desktop</option>
 									<option value="LXDE">LXDE desktop</option>
