use filled-in checkboxes

--- a/FAIme/index.html
+++ b/FAIme/index.html
@@ -191,7 +191,7 @@ This image will do an unattended installation of Debian and the selected applica
 									</select>
 								</div>
 								<label>
-									<input type="checkbox" name="cl1" value="BACKPORTS"/>
+									<input type="checkbox" class="filled-in" name="cl1" value="BACKPORTS"/>
 									<span>Enable backports including newer kernel</span>
 								</label>
 							</div>
@@ -224,37 +224,37 @@ This image will do an unattended installation of Debian and the selected applica
 							<ul class="col s12 m6">
 								<li>
 									<label>
-										<input type="checkbox" name="cl2" value="DEBIAN_DEVEL"/>
+										<input type="checkbox" class="filled-in" name="cl2" value="DEBIAN_DEVEL"/>
 										<span>Debian developer tools</span>
 									</label>
 								</li>
 								<li>
 									<label>
-										<input type="checkbox" name="cl3" value="WEBSERVER"/>
+										<input type="checkbox" class="filled-in" name="cl3" value="WEBSERVER"/>
 										<span>Web server</span>
 									</label>
 								</li>
 								<li>
 									<label>
-										<input type="checkbox" name="cl4" value="PRINTSERVER"/>
+										<input type="checkbox" class="filled-in" name="cl4" value="PRINTSERVER"/>
 										<span>Print server</span>
 									</label>
 								</li>
 								<li>
 									<label>
-										<input type="checkbox" name="cl5" value="SSH_SERVER" checked="checked"/>
+										<input type="checkbox" class="filled-in" name="cl5" value="SSH_SERVER" checked="checked"/>
 										<span>Openssh server</span>
 									</label>
 								</li>
 								<li>
 									<label>
-										<input type="checkbox" name="cl6" value="STANDARD" checked="checked"/>
+										<input type="checkbox" class="filled-in" name="cl6" value="STANDARD" checked="checked"/>
 										<span>Standard system tools</span>
 									</label>
 								</li>
 								<li>
 									<label>
-										<input type="checkbox" name="cl7" value="NONFREE" checked="checked"/>
+										<input type="checkbox" class="filled-in" name="cl7" value="NONFREE" checked="checked"/>
 										<span>Non-free Linux firmware</span>
 									</label>
 								</li>
@@ -316,7 +316,7 @@ This image will do an unattended installation of Debian and the selected applica
 
                                                                 <div class="col s12 m6 input-field">
 									<label>
-                                                      <input type="checkbox" name="rclocal" value="1" checked />
+                                                      <input type="checkbox" class="filled-in" name="rclocal" value="1" checked />
  <span> </span>
 
                                                                         </label>
