use text instead of png for title, add hiding/showing helper

--- a/header.html
+++ b/header.html
@@ -2,9 +2,9 @@
   <nav class="grey darken-3">
     <div class="nav-wrapper">
       <a href="/" class="brand-logo center">
-        <img src="/pics/FAI.png" class="responsive-img hide-on-small-only" style="padding-top:2%" width="40%" alt="">
-        <span class="hide-on-med-and-up">FAI</span>
 
+        <div class="hide-on-med-and-up show-on-small">FAI</div>
+        <div class="hide-on-small-only show-on-medium-and-up" style="width: 530px";">FAI - Fully Automatic Installation</div>
       </a>
       <a href="#" data-target="sidenav" class="sidenav-trigger">
         <i class="material-icons">menu</i>
