--- a/talks/index.html
+++ b/talks/index.html
@@ -1,41 +1,45 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN"
-    "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
-<html xmlns="http://www.w3.org/1999/xhtml">
+<!DOCTYPE html>
 <html lang="en">
 
   <head>
-    <meta http-equiv="Content-Type" content="text/html; charset=utf8" />
-      <title>FAI - Fully Automatic Installation</title>
-      <link rel="stylesheet" type="text/css" href="/css/main.css" media="screen" />
-	<link rel="stylesheet" type="text/css" href="/css/print.css" media="print" />
-	  <!--[if lte IE 6]>
-	  <link rel="stylesheet" type="text/css" href="/css/ie6_or_less.css" />
-	  <![endif]-->
+    <!--Import Google Icon Font-->
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+    <!--Import materialize.css-->
+    <link type="text/css" rel="stylesheet" href="/css/materialize.css" media="screen"/>
+
+    <!--Import sidenav-compact.css-->
+    <link type="text/css" rel="stylesheet" href="/css/sidenav-compact.css" media="screen"/>
+
+    <!--Let browser know website is optimized for mobile-->
+    <meta name="viewport" content="width=device-width,initial-scale=1.0"/>
+
+    <link rel="icon" href="/pics/favicon.ico" type="image/x-icon">
+    <meta charset="UTF-8"/>
+    <title>FAI - Fully Automatic Installation</title>
   </head>
 
-  <body id="type-b">
-    <div id="wrap">
-      <div id="header">
-	<div id="site-name">
-	  <a href="/">FAI - Fully Automatic Installation</a>
-	</div>
-<!-- removed header-menu-unused.htm -->
-      </div>
+  <body>
+    <header>
+      <!--#include virtual="/header.html" -->
+    </header>
+    <main>
+      <div class="container">
+        <div class="row">
 
-<!--#include virtual="/menu.html" -->
-      <div id="content">
-<!-- removed breadcrumb -->
+          <div class="col s12">
 
 <h3>Talks and other activities of Thomas Lange</h3>
 
-<ul>
-<li>  <a href="../doc/fai_tutorial_1999.pdf">The fully automatic installation of a Linux cluster</a>; september 8, 1999; <a href="http://www.linux-kongress.org/1999/"> 6th International Linux Kongress </a>, Augsburg, Germany; 
+<ul class="col s12 browser-default">
+<li><a href="https://blog.fai-project.org">Blog posts about FAI</a></li>
+<p>
+  <li>  <a href="../doc/fai_tutorial_1999.pdf">The fully automatic installation of a Linux cluster</a>; september 8, 1999; <a href="http://www.linux-kongress.org/1999/"> 6th International Linux Kongress </a>, Augsburg, Germany;
 <li> Die voll automatische Installation eines Linux Clusters; october 20, 1999; Institut f&uuml;r Computergraphik, TU Wien, &Ouml;sterreich
 <li> <a href="suninstall_vortrag.tar.gz"> Die (voll-) automatische Installation eines Sun Clusters in der Informatik</a> ; april 28, 1999, RRZK, Universit&auml;t zu K&ouml;ln, german
 <li> Die voll automatische Installation eines Linux Clusters; january 11, 2000, Linux-Workshop, Uni K&ouml;ln
 <li> Das Installationstool FAI (Fully automatic Installation); june 15, 2000, <a href="http://www.guug.de/veranstaltungen/ffg/2000/">GUUG Fr&uuml;hjahrsfachgespr&auml;ch 2000</a>
 <li> <a href="../doc/fai_kolloquium_11_2000.pdf">FAI - ein Tool zur automatischen Installation von Linux</a>; november 22, 2000, <a href="http://www.uni-koeln.de/RRZK/aktuell/veranstaltungen/praxis00/">Kolloquium: Praxis der Datenverarbeitung</a>
-<li> Das Installationstool FAI; march 2, 2001, OSIE 2001 - Offene Systeme im Einsatz, Uni K&ouml;ln 
+<li> Das Installationstool FAI; march 2, 2001, OSIE 2001 - Offene Systeme im Einsatz, Uni K&ouml;ln
 <li> <a href="../doc/braunschweig.pdf">FAI - Ein Tool zur automatischen Installation von Debian GNU/Linux</a>; may 4.-6., 2001, <a href="http://braunschweiger.linuxtage.de/">3. Braunschweiger Linuxtage</a>, TU Braunschweig
 
 <li> <a href="../doc/bordeaux2001.pdf"> FAI - a tool for the fully automatic installation of Debian GNU/Linux</a>; july 2-5, 2001, Debian Conference one, Bordeaux
@@ -48,7 +52,7 @@
 
 <li> I presented the FAI poster at <a href="http://www.nluug.nl/events/sane2002/">SANE 2002</a>
 in Maastricht, end of may 2002.
-<li> 
+<li>
 Tutorial at the Linux kongress 2003: <a href="http://www.linux-kongress.org/2003/tutorials/index.html#1_1_6">Let's build a Beowulf Cluster.</a>
 <li> I gave a <a
 href="http://www.tu-chemnitz.de/linux/tag/2004/vortraege/detail.html?idx=35">talk</a>
@@ -100,8 +104,8 @@ Source Meets Business</a>, 22.-24. Januar  2008  in Nuernberg, <a href="../doc/o
 
 <li> A talk at the <a href="https://sysadmin.miniconf.org/programme15.html">
 linux.conf.au Systems Administration Miniconf</a> 2015
-<a href="../doc/lca2015-thomas_lange-fai.pdf">Slides</a>, 
-<a href="../videos/FAI_the_universal_deployment_tool.webm">Video</a>, 
+<a href="../doc/lca2015-thomas_lange-fai.pdf">Slides</a>,
+<a href="../videos/FAI_the_universal_deployment_tool.webm">Video</a>,
 <a href="https://www.youtube.com/watch?v=_oAmsN_8NRQ">Youtube</a>
 
 
@@ -125,7 +129,7 @@ live demos of FAI 5.0 </a> at DebConf 16 in Capetown.
 <li> <a
 href="http://meetings-archive.debian.net/pub/debian-meetings/2017/mini-debconf-cambridge/my-two-cents-on-d-i.vp9.webm">Mini-Debconf Cambridge 2017</a>
 
-<ul>
+<ul class="col s12 browser-default">
 <li> talk: Creating disk images using FAI, <a href="http://meetings-archive.debian.net/pub/debian-meetings/2017/mini-debconf-cambridge/creating-disk-images-using-fai.vp9.webm">video</a>,
 <a href="/doc/cambridge-17.pdf">slides</a>
 <li>
@@ -156,36 +160,30 @@ href="http://meetings-archive.debian.net/pub/debian-meetings/2017/mini-debconf-c
 </ul>
 
 
-<ul>
-<li><a href="https://blog.fai-project.org">Blog posts about FAI</a></li>
-</ul>
 
-
-
-
-
-<!--
-<a href=http://www.linuxtag.org>LinuxTag 2004</a> 23-26. june in Karlsruhe or
-<a href="http://conference2004.kde.org/"> KDE Community World Summit 2004 aKademy</a>
-in Ludwigsburg/Germany, Region of Stuttgart, 21st to 29th of August
-and at
-<a href=www.linux-kongress.org>Linux Kongress 2004</a>
-<li>
-<ul>
-<li>
-<a href=http://www.usenix.org/events/lisa04/>LISA 2004 in Atlanta</a>
-</ul>
--->
-
-</ul>
 <p>
 
 <ADDRESS>
 Mon, 12 Aug 2019 10:17:21 +0200
 </ADDRESS>
 
+
+
+
+          </div>
+
+        </div>
       </div>
-    </div>
-  </div>
+
+    </main>
+
+    <footer class="page-footer grey darken-3">
+      <!--#include virtual="/footer.html" -->
+    </footer>
+    <!--JavaScript at end of body for optimized loading-->
+    <script src="/js/materialize.js"></script>
+    <script>
+      M.AutoInit();
+    </script>
   </body>
 </html>
