--- a/contact/index.html
+++ b/contact/index.html
@@ -1,60 +1,56 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN"
-    "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
-<html xmlns="http://www.w3.org/1999/xhtml">
+<!DOCTYPE html>
 <html lang="en">
 
   <head>
-    <meta http-equiv="Content-Type" content="text/html; charset=us-ascii" />
-      <title>FAI - Fully Automatic Installation</title>
-      <link rel="stylesheet" type="text/css" href="/css/main.css" media="screen" />
-	<link rel="stylesheet" type="text/css" href="/css/print.css" media="print" />
-	  <!--[if lte IE 6]>
-	  <link rel="stylesheet" type="text/css" href="/css/ie6_or_less.css" />
-	  <![endif]-->
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+    <link type="text/css" rel="stylesheet" href="/css/materialize.css" media="screen"/>
+    <link type="text/css" rel="stylesheet" href="/css/sidenav-compact.css" media="screen"/>
+
+    <!-- Let browser know website is optimized for mobile-->
+    <meta name="viewport" content="width=device-width,initial-scale=1.0"/>
+
+    <link rel="icon" href="/pics/favicon.ico" type="image/x-icon">
+    <meta charset="UTF-8"/>
+    <title>FAI - Fully Automatic Installation</title>
   </head>
 
-  <body id="type-b">
-    <div id="wrap">
-      <div id="header">
-	<div id="site-name">
-	  <a href="/">FAI - Fully Automatic Installation</a>
-	</div>
-<!-- removed header-menu-unused.htm -->
-      </div>
 
-<!--#include virtual="/menu.html" -->
-      <div id="content">
-<!-- removed breadcrumb -->
+  <body>
+    <header>
+      <!--#include virtual="/header.html" -->
+    </header>
+    <main>
+      <div class="container">
+        <div class="row">
 
-<h1>Author of FAI</h1>
-Thomas Lange is the main author of FAI. He's a Debian Developer since 2000 and a sysadmin since
-1992. He started the FAI project in 1999.
+          <div class="col s12">
 
-<br>
-<a href="https://cs.uni-koeln.de/ls-juenger/people/lange">Personal web page</a>
-<br>
-Mail: lange =@= fai-project dOt org
-<br>
-IRC: Mrfai on channel #fai
-<p>
-<a href="/talks/">FAI Talks</a> of Thomas</p>
+<h3>Author of FAI</h3>
+<ul class="col s12 browser-default">
+<li>Thomas Lange is the main author of FAI. He's a Debian Developer
+  since 2000 and a sysadmin since 1992. He started the FAI project in 1999.</li>
+
+<li><a href="https://visva.cs.uni-koeln.de/team/lange">Personal web page</a></li>
+<li>Mail: lange =@= fai-project dOt org</li>
+<li>IRC: Mrfai on channel #fai</li>
+<li><a href="/talks/">FAI Talks</a> of Thomas</li>
+</ul>
 <p> &nbsp; </p>
 
-<h1>Contact / Support</h1>
+<h3>Contact / Support</h3>
 
-<ul>
+<ul class="col s12 browser-default">
 <li> E-mail: <a href="mailto:fai (at) fai-project.org">fai no-spam @fai-project.org</a>
 for feedback, suggestions and comments
 <li> You can also talk to Mrfai on #fai on irc.debian.org
 <li> If you have any question, please use the mailing list
 <li> You can also use the mailing list for feedback, comments
-<li> Bugs should be reported via the <a href="http://bugs.debian.org">Debian Bug Tracking System</a>  (BTS)
+<li> Bugs should be reported via the <a href="https://bugs.debian.org/cgi-bin/pkgreport.cgi?repeatmerged=no&src=faig">Debian Bug Tracking System</a>  (BTS)
 </ul>
+<p> &nbsp; </p>
 
-<p> &nbsp; </p><p> &nbsp; </p>
-
-<h2>Professional support</h2>
-<ul>
+<h3>Professional support</h3>
+<ul class="col s12 browser-default">
 <li> Worldwide commercial support for FAI is available from the
 author himself. Have a look at <a href="http://fai-cluster.de">fai-cluster.de</a>. Send
 an <a href="mailto:ber=a=tun=g ==send=nospam@fai-cluster.de">email</a>.
@@ -64,11 +60,20 @@ at Linuxhotel</a>.
 you. Just ask via email for more information.
 </ul>
 
-<p> &nbsp; </p><p> &nbsp; </p>
 
-      </div>
-    </div>
-  <div id="footer"></div>
-  </div>
+</div>
+</div>
+</div>
+
+</main>
+
+    <footer class="page-footer grey darken-3">
+      <!--#include virtual="/footer.html" -->
+    </footer>
+    <!--JavaScript at end of body for optimized loading-->
+    <script src="/js/materialize.js"></script>
+    <script>
+      M.AutoInit();
+    </script>
   </body>
 </html>
