--- a/otherdocs/index.html
+++ b/otherdocs/index.html
@@ -1,33 +1,32 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN"
-    "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
-<html xmlns="http://www.w3.org/1999/xhtml">
+<!DOCTYPE html>
 <html lang="en">
 
   <head>
-    <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-      <title>FAI - Fully Automatic Installation</title>
-      <link rel="stylesheet" type="text/css" href="/css/main.css" media="screen" />
-	<link rel="stylesheet" type="text/css" href="/css/print.css" media="print" />
-	  <!--[if lte IE 6]>
-	  <link rel="stylesheet" type="text/css" href="/css/ie6_or_less.css" />
-	  <![endif]-->
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+    <link type="text/css" rel="stylesheet" href="/css/materialize.css" media="screen">
+    <link type="text/css" rel="stylesheet" href="/css/sidenav-compact.css" media="screen">
+
+    <!-- Let browser know website is optimized for mobile-->
+    <meta name="viewport" content="width=device-width,initial-scale=1.0">
+
+    <link rel="icon" href="/pics/favicon.ico" type="image/x-icon">
+    <meta charset="UTF-8">
+    <title>FAI - Fully Automatic Installation</title>
   </head>
 
-  <body id="type-b">
-    <div id="wrap">
-      <div id="header">
-	<div id="site-name">
-	  <a href="/">FAI - Fully Automatic Installation</a>
-	</div>
-<!-- removed header-menu-unused.htm -->
-      </div>
+  <body>
+    <header>
+      <!--#include virtual="/header.html" -->
+    </header>
+    <main>
+      <div class="container">
+        <div class="row">
 
-<!--#include virtual="/menu.html" -->
-      <div id="content">
-<!-- removed breadcrumb -->
+          <div class="col s12">
 
-<h1>Other projects that use FAI or are build on top of FAI</h1>
-<ul>
+<h3>Other projects that use FAI or are build on top of FAI</h3>
+
+<ul class="col s12 browser-default">
 
 <li> <a href="https://wiki.debian.org/DebianLAN">Debian Local Area
 Network</a> is a project, that provides a FAI configuration for
@@ -42,7 +41,7 @@ using FAI for installing the clients
 href="https://github.com/J0oo/FAI-Administration-Tool">FAI-Administration-Tool</a>
 is a web based application (a PHP, JavaScript) used to create
 client configurations for boot over PXE and afterwards installation
-with FAI. (<a href="https://github.com/J0oo/FAI-Administration-Tool/commit/8be79bde54f48764e5be2a230dd227e744f53b78">screenshots)
+with FAI. <a href="https://github.com/J0oo/FAI-Administration-Tool/commit/8be79bde54f48764e5be2a230dd227e744f53b78">(screenshots)</a>
 
 <li> A <a href="https://www.ch.cam.ac.uk/computing/web-frontend-faimond">
 Web-frontend</a> to fai-monitor
@@ -72,9 +71,9 @@ fork of GOsa which is actively maintained.
 
 </ul>
 
-<h1>Other FAI documentation</h1>
-
-<ul>
+<p> &nbsp; </p>
+<h3>Other FAI documentation</h3>
+<ul class="col s12 browser-default">
 
 <li> <a href="https://wiki.fai-project.org/index.php/Variables">List</a>  of important variables
 inside FAI
@@ -234,8 +233,10 @@ FAI. This code is no longer maintained.
 </ul>
 
 
-<h2>FAI documentation in German</h2>
-<ul>
+<p> &nbsp; </p>
+<h3>FAI documentation in German</h3>
+
+<ul class="col s12 browser-default">
 
 
 <li> Some documentation about FAI server setup, and crfeating and
@@ -339,8 +340,10 @@ work, what is possible, how does the company use FAI.
 
 </ul>
 
-<h2>FAI documentation in other languages</h2>
-<ul>
+<p> &nbsp; </p>
+<h3>FAI documentation in other languages</h3>
+
+<ul class="col s12 browser-default">
 <li> <b>Spanish, espa&ntilde;ol</b>
 <ul>
 <li> A <a href="https://forja.rediris.es/docman/view.php/428/793/memoria_desdeslin.pdf">documentation</a> of three FAI installations (Despliegue desatendido de GNU/Linux, Linux unattended deployment) (2009).
@@ -392,14 +395,24 @@ Short documentation</a> about FAI and etch.
 </ul>
 
 
-<hr>
 <address>
 Tue, 29 Oct 2019 13:39:44 +0100
 </address>
 
+
+          </div>
+        </div>
       </div>
-    </div>
-  <div id="footer"></div>
-  </div>
+
+    </main>
+
+    <footer class="page-footer grey darken-3">
+      <!--#include virtual="/footer.html" -->
+    </footer>
+    <!--JavaScript at end of body for optimized loading-->
+    <script src="/js/materialize.js"></script>
+    <script>
+      M.AutoInit();
+    </script>
   </body>
 </html>
