--- a/contact/index.html
+++ b/contact/index.html
@@ -45,7 +45,7 @@ for feedback, suggestions and comments
 <li> You can also talk to Mrfai on #fai on irc.debian.org
 <li> If you have any question, please use the mailing list
 <li> You can also use the mailing list for feedback, comments
-<li> Bugs should be reported via the <a href="https://bugs.debian.org/cgi-bin/pkgreport.cgi?repeatmerged=no&src=faig">Debian Bug Tracking System</a>  (BTS)
+<li> Bugs should be reported via the <a href="https://bugs.debian.org/src:fai">Debian Bug Tracking System</a>  (BTS)
 </ul>
 <p> &nbsp; </p>
 
