--- a/cluster/index.html
+++ b/cluster/index.html
@@ -1,36 +1,33 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN"
-    "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
-<html xmlns="http://www.w3.org/1999/xhtml">
+<!DOCTYPE html>
 <html lang="en">
 
   <head>
-    <meta http-equiv="Content-Type" content="text/html; charset=us-ascii" />
-      <title>FAI - Fully Automatic Installation</title>
-      <link rel="stylesheet" type="text/css" href="/css/main.css" media="screen" />
-	<link rel="stylesheet" type="text/css" href="/css/print.css" media="print" />
-	  <!--[if lte IE 6]>
-	  <link rel="stylesheet" type="text/css" href="/css/ie6_or_less.css" />
-	  <![endif]-->
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+    <link type="text/css" rel="stylesheet" href="/css/materialize.css" media="screen">
+    <link type="text/css" rel="stylesheet" href="/css/sidenav-compact.css" media="screen">
+
+    <!-- Let browser know website is optimized for mobile-->
+    <meta name="viewport" content="width=device-width,initial-scale=1.0">
+
+    <link rel="icon" href="/pics/favicon.ico" type="image/x-icon">
+    <meta charset="UTF-8">
+    <title>FAI - Fully Automatic Installation</title>
   </head>
 
-  <body id="type-b">
-    <div id="wrap">
-      <div id="header">
-	<div id="site-name">
-	  <a href="/">FAI - Fully Automatic Installation</a>
-	</div>
-<!-- removed header-menu-unused.htm -->
-      </div>
+  <body>
+    <header>
+      <!--#include virtual="/header.html" -->
+    </header>
+    <main>
+      <div class="container">
+        <div class="row">
+          <div class="col s12">
 
-<!--#include virtual="/menu.html" -->
-      <div id="content">
-<!-- removed breadcrumb -->
+<h3>FAI cluster installations</h3>
 
-<h1>FAI cluster installations</h1>
+<ul class="col s12 browser-default">
 
-<ul>
-
-<li>Thomas installed a 36 node cluster with 720 cores. 
+<li>Thomas installed a 36 node cluster with 720 cores.
 Each node has two E5-2690v2, 3.00GHz and 128GB of RAM. The parallel
 installation of all nodes using FAI took 7 minutes. (2014)
 
@@ -64,7 +61,7 @@ href=http://www.top500.org/list/2002/06/>top500.org</a> supercomputer list in ju
 The <a href=http://www.ai.sri.com/centibots/tech_design/index.html>100
 Robots Project</a> (2002)
 <li>
-The university of California Santa Barbara has a 
+The university of California Santa Barbara has a
 16 node dual AMD 1.8Ghz <a href=http://www.cs.ucsb.edu/~dbl/dblcluster.html>Beowulf cluster</a> for database and distributed systems research
 <li>
 
@@ -102,14 +99,23 @@ lucie: Presto I, Presto II, Presto III, OBI Grid Cluster
 foils</a> of building a Beowulf cluster from a winter school in 2001.
 </ul>
 
-<HR>
 <ADDRESS>
 Tue, 29 Oct 2019 13:38:54 +0100
 </ADDRESS>
 
-      </div>
-    </div>
-  <div id="footer"></div>
-  </div>
+</div>
+</div>
+</div>
+
+    </main>
+
+    <footer class="page-footer grey darken-3">
+      <!--#include virtual="/footer.html" -->
+    </footer>
+    <!--JavaScript at end of body for optimized loading-->
+    <script src="/js/materialize.js"></script>
+    <script>
+      M.AutoInit();
+    </script>
   </body>
 </html>
