redirect to screenshots/index.html#cd-slide

--- a/slideshow/index.html
+++ b/slideshow/index.html
@@ -2,100 +2,8 @@
 <html lang="en">
 
   <head>
-    <!--Import Google Icon Font-->
-    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-    <!--Import materialize.css-->
-    <link type="text/css" rel="stylesheet" href="/css/materialize.css" media="screen"/>
-
-    <!--Import sidenav-compact.css-->
-    <link type="text/css" rel="stylesheet" href="/css/sidenav-compact.css" media="screen"/>
-
-    <!--Let browser know website is optimized for mobile-->
-    <meta name="viewport" content="width=device-width,initial-scale=1.0"/>
-
-    <link rel="icon" href="/pics/favicon.ico" type="image/x-icon">
-    <meta charset="UTF-8"/>
-    <title>Fully Automatic Installation - Slideshow</title>
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
-    <style>
-      .middle-indicator {
-        position: absolute;
-        top: 50%;
-      }
-      .middle-indicator-text {
-        font-size: 4.2rem;
-      }
-      a.middle-indicator-text {
-        color: white !important;
-      }
-    </style>
-  </head>
-
+    <meta http-equiv="refresh" content="1;url=https://fai-project.org/screenshots/index.html#cd-slide" />
+   </head>
   <body>
-    <header>
-      <!--#include virtual="/header.html" -->
-    </header>
-    <main>
-      <div class="container">
-        <div class="carousel carousel-slider center " data-indicators="true">
-          <div class="carousel-fixed-item center middle-indicator">
-            <div class="left">
-              <a href="prev" class="movePrevCarousel middle-indicator-text waves-effect waves-light content-indicator">
-                <i class="material-icons left  middle-indicator-text">chevron_left</i>
-              </a>
-            </div>
-
-            <div class="right">
-              <a href="next" class=" moveNextCarousel middle-indicator-text waves-effect waves-light content-indicator">
-                <i class="material-icons right middle-indicator-text">chevron_right</i>
-              </a>
-            </div>
-          </div>
-          <div class="carousel-item red white-text" href="#one!">
-            <h2>First Panel</h2>
-            <p class="white-text">This is your first panel</p>
-          </div>
-          <div class="carousel-item amber white-text" href="#two!">
-            <h2>Second Panel</h2>
-            <p class="white-text">This is your second panel</p>
-          </div>
-          <div class="carousel-item green white-text" href="#three!">
-            <h2>Third Panel</h2>
-            <p class="white-text">This is your third panel</p>
-          </div>
-          <div class="carousel-item blue white-text" href="#four!">
-            <h2>Fourth Panel</h2>
-            <p class="white-text">This is your fourth panel</p>
-          </div>
-        </div>
-      </div>
-    </main>
-    <footer class="page-footer grey darken-3">
-      <!--#include virtual="/footer.html" -->
-    </footer>
-
-    <!--JavaScript at end of body for optimized loading-->
-    <script src="/js/materialize.js"></script>
-    <script>
-      M.AutoInit();
-    </script>
-    <script>
-      $('.carousel.carousel-slider').carousel({fullWidth: true, indicators: true});
-
-      // move next carousel
-      $('.moveNextCarousel').click(function (e) {
-        e.preventDefault();
-        e.stopPropagation();
-        $('.carousel').carousel('next');
-      });
-
-      // move prev carousel
-      $('.movePrevCarousel').click(function (e) {
-        e.preventDefault();
-        e.stopPropagation();
-        $('.carousel').carousel('prev');
-      });
-    </script>
-
   </body>
 </html>
