--- a/screenshots/index.html
+++ b/screenshots/index.html
@@ -130,6 +130,7 @@
           </div>
         </div>
 
+        <a name="cd-slide"></a>
         <div class="row">
           <div class="col s10">
             <h4>A slideshow of an installation via CD</h4>
