--- a/screenshots/index.html
+++ b/screenshots/index.html
@@ -2,21 +2,16 @@
 <html lang="en">
 
   <head>
-    <!--Import Google Icon Font-->
-    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-    <!--Import materialize.css-->
     <link type="text/css" rel="stylesheet" href="/css/materialize.css" media="screen"/>
-
-    <!--Import sidenav-compact.css-->
     <link type="text/css" rel="stylesheet" href="/css/sidenav-compact.css" media="screen"/>
+    <link type="text/css" rel="stylesheet" href="/css/local.css" media="screen"/>
 
-    <!--Let browser know website is optimized for mobile-->
     <meta name="viewport" content="width=device-width,initial-scale=1.0"/>
 
     <link rel="icon" href="/pics/favicon.ico" type="image/x-icon">
     <meta charset="UTF-8"/>
     <title>FAI - Fully Automatic Installation</title>
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+    <script src="/css/jquery.min.js"></script>
     <style>
       .middle-indicator {
         position: absolute;
