make head includes uniform, use local fonts

--- a/download/index.html
+++ b/download/index.html
@@ -2,16 +2,10 @@
 <html lang="en">
 
   <head>
-    <!--Import Google Icon Font-->
-    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-    <!--Import materialize.css-->
     <link type="text/css" rel="stylesheet" href="/css/materialize.css" media="screen"/>
-    <link type="text/css" rel="stylesheet" href="/css/code.css" media="screen"/>
-
-    <!--Import sidenav-compact.css-->
     <link type="text/css" rel="stylesheet" href="/css/sidenav-compact.css" media="screen"/>
+    <link type="text/css" rel="stylesheet" href="/css/local.css" media="screen"/>
 
-    <!--Let browser know website is optimized for mobile-->
     <meta name="viewport" content="width=device-width,initial-scale=1.0"/>
 
     <link rel="icon" href="/pics/favicon.ico" type="image/x-icon">
