--- a/mailinglist/index.html
+++ b/mailinglist/index.html
@@ -36,10 +36,10 @@
 
           <form method="get" action="https://google.com/search">
             <div class="col s12 m12">
-              <p class="col s4 m4">
-                Search the linux-fai mailing list:
+              <p class="col s4 m3 l2">
+                Search linux-fai:
               </p>
-              <div class="input-field col s6 m6">
+              <div class="input-field col s5 m5 l4">
                 <input type="text" name="q"/>
                 <input type="hidden" name="sitesearch" value="https://lists.uni-koeln.de/pipermail/linux-fai/"/>
               </div>
@@ -54,10 +54,10 @@
           <a href="https://www.mail-archive.com/linux-fai-devel%40uni-koeln.de"/>searchable archive</a>)
         <form method="get" action="https://google.com/search">
           <div class="col s12 m12">
-            <p class="col s4 m4">
-              Search the linux-fai-devel mailing list:
+            <p class="col s4 m3 l2">
+              Search linux-fai-devel:
             </p>
-            <div class="input-field col s6 m6">
+            <div class="input-field col s5 m5 l4">
               <input type="text" name="q"/>
               <input type="hidden" name="sitesearch" value="https://lists.uni-koeln.de/pipermail/linux-fai-devel/"/>
             </div>
