make download button text bigger, black text

--- a/index.html
+++ b/index.html
@@ -36,8 +36,8 @@
           </div>
           <div class="col s4">
 
-            <a class="waves-effect waves-light btn-large orange valign right" href="/fai-cd/faicd64-large_6.0.iso">
-              <i class="material-icons left">download</i>FAI ISO (1.3GB)</a>
+            <a class="waves-effect waves-light btn-large orange valign right black-text" style="font-size: 170%" href="/fai-cd/faicd64-large_6.0.iso">
+              <i class="material-icons left">download</i>ISO (1.3GB)</a>
           </div>
 
         </div>
