besser alignment using m10

--- a/fai-cd/index.html
+++ b/fai-cd/index.html
@@ -22,7 +22,7 @@
         <div class="row">
           <h4 class="col s12">FAI CD: The Easy Way to Start With FAI</h4>
 
-          <div class="col s12 valign-wrapper">
+          <div class="col s12 m10 valign-wrapper">
             <div class="col m5 s12 valign">
               <a href="faicd64-large_5.10.3.iso" class="waves-effect waves-light btn orange black-text">
                 <i class="material-icons left">download</i>FAI ISO large (1.2GB)</a>
@@ -32,7 +32,7 @@
             </p>
           </div>
 
-          <div class="col s12 valign-wrapper">
+          <div class="col s12 m10 valign-wrapper">
             <div class="col m5 s12 valign">
               <a href="faicd64-small_5.10.3.iso" class="waves-effect waves-light btn orange black-text">
                 <i class="material-icons left">download</i>FAI ISO small (674MB)</a>
@@ -42,7 +42,7 @@
             </p>
           </div>
 
-          <div class="col s12 valign-wrapper">
+          <div class="col s12 m10 valign-wrapper">
             <div class="col m5 s12 valign">
               <a href="faicd64-ubuntu-only_5.10.3.iso" class="waves-effect waves-light btn orange black-text">
                 <i class="material-icons left">download</i>FAI ISO Ubuntu (1.3GB)</a>
@@ -52,7 +52,7 @@
             </p>
           </div>
 
-          <div class="col s12 valign-wrapper">
+          <div class="col s12 m10 valign-wrapper">
             <div class="col m5 s12 valign">
               <a href="faicd64-autodiscover_5.10.3.iso" class="waves-effect waves-light btn orange black-text">
                 <i class="material-icons left">download</i>Autodiscover CD (38MB)</a>
